--- a/contributor-docs/datasciencebites.qmd
+++ b/contributor-docs/datasciencebites.qmd
@@ -6,7 +6,9 @@ Our [DataScienceBites](/news-and-views/datasciencebites/index.qmd) blog publishe
 
 Posts are targeted at undergraduate level. Each presents a non-technical overview of a new research paper and its key findings, potential applications, and implications. 
 
-We welcome contributions from graduate students and early career researchers in data science (or related subjects) at universities throughout the world, as well as industry researchers. Contributors must have a passion for science communication and a drive to explain, clarify and demystify.   
+We welcome contributions from graduate students and early career researchers in data science (or related subjects) at universities throughout the world, as well as industry researchers. Contributors must have a passion for science communication and a drive to explain, clarify and demystify.
+
+![](/news-and-views/datasciencebites/datasciencebites-logo.png){fig-alt="DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites." width="300" fig-align="center"}
 
 ## Basic structure of a Bites post 
 
