--- a/news-and-views/datasciencebites/posts/2023/01/24/pulling-patterns.qmd
+++ b/news-and-views/datasciencebites/posts/2023/01/24/pulling-patterns.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Pulling patterns out of data with a graph"
 description: |
-  Large volumes of data are pouring in every day from scientific experiments, so much so that it is now commonplace to perform dimension reduction in order to reduce a large number of measurements to a set of key values that are easier to visualize and interpret. Enter "The Sequencer", a proposed method to find trends within high-dimensional datasets.  
+  Large volumes of data are pouring in every day from scientific experiments, so much so that it is now commonplace to perform dimension reduction in order to reduce a large number of measurements to a set of key values that are easier to visualize and interpret. Enter 'The Sequencer', a proposed method to find trends within high-dimensional datasets.  
 categories:
   - Data management
   - Dimension reduction
