--- a/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
+++ b/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
@@ -12,7 +12,7 @@ toc: true
 image: images/Detlef.png
 image-alt: Photo of Detlef Nauck
 ---
-ChatGPT is, right now, the world's most popular - and controversial - chatbot. Users have been both wowed by its capabilities[^1] and concerned by the confident-sounding nonsense it produces. 
+ChatGPT is, right now, the world's most popular - and controversial - chatbot. Users have been both wowed by its capabilities[^1] and concerned by the confident-sounding nonsense it can produce. 
 
 But perhaps what impresses most is the way it is able to sustain a conversation. [When I interviewed our editorial board member Detlef Nauck about large langauge models (LLMs)](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.html), back in November, he said:
 
