--- a/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd
+++ b/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd
@@ -9,7 +9,7 @@ categories:
   - Statistics
   - Stakeholder engagement
 author: Brian Tarran
-date: 04/24/2023
+date: 06/20/2023
 image: images/chanuki-seresinhe.png
 image-alt: Photo of Chanuki Seresinhe. Photo supplied by Chanuki Seresinhe, used with permission.
 toc: false
@@ -20,12 +20,12 @@ I am Chanuki Seresinhe, head of data science at Zoopla and Hometrack. My commerc
 I am also the founder of [beautifulplaces.ai](https://www.beautifulplaces.ai/), which is a continuation of my University of Warwick and Alan Turing Institute PhD work where I provided the first large-scale evidence that beautiful places are connected to our wellbeing. 
 
 **What does your job involve?**\
-My role at Zoopla involves managing data scientists both for Zoopla and Hometrack. At Zoopla, we use data science to create an engaging experience for users who want to buy, sell and rent properties. At Hometrack, the data scientists mainly work on an Automated Valuation Model that provides property valuations to most of the major mortgage lenders in the UK. 
+My role at Zoopla involves managing data scientists both for Zoopla and Hometrack. At Zoopla, we use data science to create an engaging experience for users who want to buy, sell and rent properties. At Hometrack, the data scientists mainly work on an automated valuation model that provides property valuations to most of the major mortgage lenders in the UK. 
 
-As a leader in data science, my role primarily involves helping stakeholders across the business best leverage data science to reach our business goals, as well as ensuring my data science team has all the support and mentoring they need to design, develop and maintain high performing data science algorithms.
+As a leader in data science, my role primarily involves helping stakeholders across the business to best leverage data science to reach our business goals, as well as ensuring my data science team has all the support and mentoring they need to design, develop and maintain high performing data science algorithms.
 
 **What does “data science” mean to you?**\
-That is a really good question! One thing I have noticed is that people who aren’t familiar with the field often confuse data science and data analytics. There are indeed many similarities -- both require quite a bit of knowledge to be able to leverage the correct insights from both structured and unstructured data (data hidden within images, for example). However, data science is essential when you need to make inferences. For instance, you are not only analysing data to see what certain consumers may prefer, but you are also predicating what similar consumers might prefer. Thus, having a strong grounding in statistics is really important for anyone working in this field.
+That is a really good question! One thing I have noticed is that people who aren’t familiar with the field often confuse data science and data analytics. There are indeed many similarities -- both require quite a bit of knowledge to be able to leverage the correct insights from both structured and unstructured data (data hidden within images, for example). However, data science is essential when you need to make inferences. For instance, you are not only analysing data to see what certain consumers may prefer, but you are also predicting what similar consumers might prefer. Thus, having a strong grounding in statistics is really important for anyone working in this field.
 
 ::: {.pullquote-container}
 ::: grid
@@ -35,7 +35,7 @@ That is a really good question! One thing I have noticed is that people who aren
 ::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
 
-In data science, getting the model right is not enough, and working with people across the business to make sure the model can be integrated into the business processes is essential. If you do not use the time when developing your proof of concept to also make sure to get the right stakeholder on board, your project is dead before it even starts.
+In data science, getting the model right is not enough, and working with people across the business to make sure the model can be integrated into the business processes is essential.
 :::
 :::
 :::
@@ -46,22 +46,22 @@ Aside from a good grounding in the technical aspects of data science (which is p
 **How did you get into data science?**\
 It was somewhat by accident. I previously had a long career in digital and decided to take a career break to return to university and study economics. When I was working on my Master’s degree in behavioral economic science at the University of Warwick, I saw an ad for a PhD to “use online data to understand human behaviour” and I thought this was perfect, as it combined my prior knowledge with a new area I was increasingly becoming drawn to. I quickly taught myself how to program in Python and convinced my supervisors to take me on, and from there on, I came to love data science!
 
-**What, or who, first inspired you to become a data scientist?**
+**What, or who, first inspired you to become a data scientist?**\
 It was more about realising what you could do with data science. In my PhD, I was quantifying the connection between beautiful places and our wellbeing. While this has long been an intuitive connection, we were not able to test this on a large scale due to lack of data. Being able to use data science to start predicting the beauty of outdoor images was fascinating as it opened up a whole new method for potential research combining beauty with various wellbeing ratings. Once I started to see what was possible with data science, there was no going back.
 
 **What were the hurdles or challenges that you needed to overcome on your route into the profession?**\
 For me personally it was the challenge of moving sideways into a leadership role after my PhD and not having to start all the way from the bottom. I would have loved to continue in academia and expand my research even further, but starting from the bottom earning a tiny salary after I had taken quite a large career break to do my PhD wasn’t an option for me. So I decided to go back into the commercial world and look for a senior role from the get go and luckily Channel 4 agreed to give me my first commercial stab at data science.
 
-**And what are the challenges that you face now, as a working data scientist?**\
+**What are the challenges that you face now, as a working data scientist?**\
 Trying to keep up with everything that is constantly changing in the world of data science. I love the rapid change but it can also be quite time consuming to make sure you are on top of it and giving the right advice to people.
 
 **What was your first job in data science, and how does it compare to your current role?**\
-My first job was working as a senior data scientist at Channel 4. As a senior data scientist, even though you have additional goals to help run the team and be a mentor to more junior data scientists, you still get a great deal of time to do coding and develop your own projects. When you move more into a management role, the time you have to develop data science models diminishes. People also expect you to give in-depth guidance when you haven’t actually had much time to deep dive into a project. So, I am often trying hard to make sure I am on top of what is going on even when I have limited time and really focusing on building a strong team that can support each other and collaborate often to create better data science products. Learning to delegate is key!
+My first job was working as a senior data scientist at Channel 4. As a senior data scientist, even though you have additional goals to help run the team and be a mentor to more junior data scientists, you still get a great deal of time to do coding and develop your own projects. When you move more into a management role, the time you have to develop data science models diminishes. People also expect you to give in-depth guidance when you haven’t actually had much time to deep dive into a project. So, I am often trying hard to make sure I am on top of what is going on even when I have limited time, and really focus on building a strong team that can support each other and collaborate often to create better data science products. Learning to delegate is key!
 
 **What was the most important thing you learned in your first year on the job?**\
 How hard it is to actually get organisational buy-in to use data science at scale. It is really easy to get approval to build a proof of concept (POC). However, if you do not use the time when developing your POC to also make sure to get the right stakeholder on board, your project is dead before it even starts. So, in data science, getting the model right is not enough, and working with people across the business to make sure the model can be integrated into the business processes is essential. 
 
-**What have been your career highlights so far?**\ 
+**What have been your career highlights so far?**\
 It has been great being able to give talks about my research, and data science in general, all around the world. I have actually come to love public speaking, and I hope that as I continue to be recognised for my expertise, I can encourage and aid potential data scientists with their careers -- especially minority women, as I think that diversity in the field is very important. This is a role that is fit for people from all kinds of backgrounds and I hope I am exemplifying this. 
 
 **Have there been any mistakes or regrets along the way?**\
@@ -79,7 +79,7 @@ If you don’t understand the statistics involved in data science, make sure to 
 Try to find ways to stand out from the average data scientist. When we open up applications for data science jobs, I get hundreds of applications for each one. I am looking for people who can not only do data science but who also have other stand-out qualities that they can bring to the business. This can be something along the lines of effective stakeholder engagement to deep expertise in a certain domain or technology. 
 
 **What new ideas or developments in the field of data science are you personally most excited about or intrigued by?**\
-I am really interested to see where generative AI will take us -- particularly about how it can help us improve the speed of our own performance. It feels like Generative AI can be a technology that can help everyone -- even the everyday person -- as it can help speed up so many processes, from coding to writing to ideating. While the technology is still in its early days it is progressing rapidly and I am very curious to see where this will lead in the next year!
+I am really interested to see where generative AI will take us -- particularly about how it can help us improve the speed of our own performance. It feels like generative AI can be a technology that can help everyone -- even the everyday person -- as it can help speed up so many processes, from coding to writing to ideating. While the technology is still in its early days, it is progressing rapidly and I am very curious to see where this will lead in the next year!
 
 **What do you think will be the main challenges facing data science as a field in the next few years?**\
 Generative AI's latest breakthroughs have made AI capabilities accessible to the broader public, but it has also stoked fears around the use of AI. The headline-grabbing narratives around AI and existential threat is distracting from other conversations that are really important. There are some very real issues we do need to solve -- from biases in AI to the impact generative AI can have on wages and workforce -- but this needs to be approached in a constructive and thoughtful way.
@@ -102,7 +102,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/04/24/sami-rahman.html)
+: Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.html)
 :::
 :::
 :::
