--- a/careers/career-profiles/posts/2023/06/28/claire-morton.qmd
+++ b/careers/career-profiles/posts/2023/06/28/claire-morton.qmd
@@ -1,13 +1,13 @@
 ---
-# title: "'Once I started to see what was possible with data science, there was no going back'"
-# description: |
-#   Chanuki Seresinhe is head of data science at Zoopla and Hometrack. This is her career story so far -- from researching beautiful places to helping web users buy, sell and rent property spaces.   
-# categories:
-#   - Internet
-#   - Real estate
-#   - Leadership
-#   - Statistics
-#   - Stakeholder engagement
+title: "'I was inspired by the power that numerical data have to tell stories and promote policy change'"
+description: |
+  Claire Morton is an undergraduate student at Stanford University. In this Q&A, Claire explains how a high school job in a cell biology lab led to college studies in mathematical and computational science and environmental justice.
+categories:
+  - Education
+  - Research
+  - Policy
+  - Mentoring
+  - Statistical literacy
 author: Brian Tarran
 date: 06/28/2023
 image: images/claire-morton.png
@@ -16,11 +16,68 @@ toc: false
 ---
 This week, in celebration of Pride, Real World Data Science is collaborating with the [JEDI Organizing Group](https://datascijedi.org/) of the [American Statistical Association](https://www.amstat.org/) (ASA) and the [ASA LGBTQ+ Advocacy Committee](https://sites.google.com/view/asa-lgbtq/home) to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum.
 
-Members of the committee nominated two individuals to be featured as part of our [career profile](https://realworlddatascience.net/careers/career-profiles/) series, and so we're pleased to bring you interviews with Claire Morton (below) and [Albert Lee](albert-lee.qmd).
+Members of the committee nominated two individuals to be featured as part of our [career profile](https://realworlddatascience.net/careers/career-profiles/) series, and so we are pleased to bring you interviews with Claire Morton (below) and [Albert Lee](albert-lee.qmd).
 
 Read on to discover more about Claire's data science career (so far).
 
+::: keyline
+---
+:::
 
+**Hi, Claire. Thank you for sharing your career story with Real World Data Science. Please tell us a little about yourself and your role in data science.**\
+My name is Claire Morton, and I’m an undergraduate student studying mathematical and computational science and environmental justice at Stanford University. I’m particularly interested in using statistics and data science to work with community-based organizations and advance evidence-based environmental justice policy. I have conducted quantitative research on tools to classify disadvantaged communities, oil wells, climate resilience, housing justice, and the connections between soil and health. 
+
+**What drew you to study statistics and data science?**\
+I really enjoyed my math, statistics, and coding classes in school. I was also inspired by the power that numerical data have to tell stories and promote policy change. 
+
+**What do you think is your most important skill as a data scientist?**\
+Listening to others. Listening allows me to learn new statistics skills from my mentors and to learn about how best I can work with community partners on their priorities in my research. 
+
+**How does your gender and/or sexual identity factor into your career?**\
+I am a lesbian, and, at the start of college, I didn’t have any mentors who shared my identity. I’ve now found several through the ASA and queer communities at my university, and I’m continually inspired by the achievements of queer statisticians, mathematicians, and computer scientists. My research hasn’t explicitly connected statistics and queerness yet, but I’m interested in working on projects involving hard-to-reach populations, such as queer people, in the future. 
+
+::: {.pullquote-container}
+::: grid
+::: {.g-col-12 .g-col-lg-4}
+![Claire Morton](images/claire-morton.png){fig-alt="Portrait photo of Claire Morton" fig-align="left"}
+::: 
+::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
+![](/images/pullquote-purple.png){width="50px"}
+
+It’s important to be able to take initiative to learn skills, talk to people, and solve problems as they come up – but it’s also critical to not be afraid of asking for help when you need it. 
+:::
+:::
+:::
+
+**How did you get into data science?**\
+In high school, I worked in a cell biology lab. As part of that work, I learned to model cellular processes and analyze data from my experiments. I realized that those elements were my favorite parts of the science I was doing, so I decided to study math, computer science, and/or statistics in college. I had always been interested in environmental issues, and so I got involved in quantitative research about environmental justice. I realized that this type of research allowed me to connect the skills I have to my passions, so I’ve kept working in these areas ever since. 
+
+**What, or who, first inspired you to pursue this career path?**\
+My mom! She’s also a statistician, and she has encouraged and mentored me throughout my academic journey. I’m inspired by her success as a woman in statistics. 
+
+**What hurdles or challenges have you faced in your studies?**\
+My classes can be tough, which makes it hard to stay motivated sometimes. I also struggled to maintain a healthy work-life balance at the start of college. Finally, it has been tough to learn some of the ins and outs of the research process and publications – how best to engage with research mentors, what it looks like to write and submit a paper, and some of the nuances of working in academia. I think my next big challenge is deciding what to do after college, though I’ve been trying to reframe the question as an opportunity rather than a hurdle. I’m excited to continue doing research at the intersection of statistics and public policy in the future. 
+
+**What was your first job in data science, and how does it compare to your current role?**\
+My first job in data science was as a researcher, working at a non-profit called Physicians, Scientists, and Engineers for Healthy Energy (PSE). As part of this job, I worked with community-based organizations to code quantitative optimization models to locate climate resilience hubs in California that took community priorities into account. I’m currently a student, which involves less research but gives me the chance to focus on learning new skills for my next job. I hope to be able to work in a role like my job at PSE, combining statistics/data science, community engagement, and policy impact, in the future. 
+
+**What was the most important thing you learned in your first year on the job?**\
+The importance of being adaptable and self-directed. Research projects shift and change as you uncover new information, and it’s useful to be able to shift with them. It’s important to be able to take initiative to learn skills, talk to people, and solve problems as they come up – but it’s also critical to not be afraid of asking for help when you need it. 
+
+**What have been your career highlights so far?**\
+One was publishing research about the demographics of people living near oil wells in California, which informed policymakers about racial and socioeconomic differences in exposure to oil wells and is part of a long-standing effort from activists and researchers to protect the health of Californians. I’ve also gotten to work directly with organizers on several mapping projects, which was deeply fulfilling. Finally, I loved getting to present my research at the Joint Statistical Meetings last year, and I look forward to presenting my undergraduate thesis this year. 
+
+**What three things are at the top of your reading/study list?**\
+Some statistical areas I’m hoping to learn more about are spatial statistics and survey methods. Some books I’m excited to read are *The Color of Law*, *Data Feminism*, and *Thicker Than Blood: How Racial Statistics Lie*.  
+
+**What advice would you give for anyone wanting to study statistics and data science?**\
+Find mentors that inspire you, support your career goals, and challenge you to learn and grow as a statistician. 
+
+**What new ideas or developments in the field are you most excited about or intrigued by?**\
+I’m really interested in combining quantitative research with community-based research, so I think that cross-disciplinary developments are exciting. I’m intrigued by AI tools, and I’m interested to see how these tools change what the day-to-day of being a statistician looks like and the skills that are most sought after in a statistician. 
+
+**And what do you think will be the main challenges facing the profession over the next few years?**\
+The main challenges will be related to statistical literacy, both for the people consuming and doing statistics. While statistical methods and data becoming more accessible is a positive development, it has meant that more analyses are done incorrectly and that more misleading results are publicized (and absorbed) as truth. It’s getting much easier to twist numbers to support whatever we want them to say, and I think this will continue to challenge both statisticians and non-statisticians in the future.   
 
 ::: {.article-btn}
 [Discover more Career profiles](/careers/career-profiles/index.qmd)
@@ -38,7 +95,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-<!-- : Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.html) -->
+: Tarran, Brian. 2023. "'I was inspired by the power that numerical data have to tell stories and promote policy change.'" Real World Data Science, June 28, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/28/claire-morton.html)
 :::
 :::
 :::
